Mobile collapse effect fixed

--- a/sass/components/header/_navigation-mobile.scss
+++ b/sass/components/header/_navigation-mobile.scss
@@ -1,6 +1,5 @@
 /* Main mobile menu container */
 #mobileMenu {
-    height: auto;
     max-height: calc(100vh - 59px);
     width: 100%;
     overflow-y: scroll;
